--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <h2 style="padding:20px">Cantidad de partidas jugadas según tipo</h2>
 <iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="80%"></iframe>
-</br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>
+</br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>
 
 </div>
 </br>
