--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <div>
 <h2 style="padding:20px">Historial de puntaje</h2>
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/p1.html" height="525" width="80%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="80%"></iframe>
 </br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <h2 style="padding:20px">Cantidad de partidas jugadas según tipo</h2>
 <iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="80%"></iframe>
-</br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>
+</br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>   <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>   <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>
 
 </div>
 </br>
