--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <h1><img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px> Age of Carpincho <img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px></h1>
 </div>
 </br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
-<div>
+<div class="container">
 <h2 style="padding:20px">Historial de puntaje</h2>
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="80%"></iframe>
-</br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
+</div>
+</br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
+<div class="container">
 <h2 style="padding:20px">Cantidad de partidas jugadas según tipo</h2>
 <iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="80%"></iframe>
-</br></br></br><img src="assets/img/Capybara_l.jpg">
 </div>
+</br><img src="assets/img/Capybara_l.jpg">
 </br>
 
 
