--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Age of Carpincho</title>
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="shortcut icon" href="assets/img/fav.ico">
 </head>
 <body>
 <div class="header">
