--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
 <title>Age of Carpincho</title>
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="shortcut icon" href="assets/img/fav.ico">
 </head>
 <body>
-<div class="header">
+ <style>body {background-image: url('assets/img/bgage.jpg'); background-size: 100%;}
+</style> 
+<div class="header2">
 <h1><img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px> Age of Carpincho <img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px></h1>
 </div>
-</br></br></br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
+<img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <div class="container">
 <h2 style="padding:20px">Historial de puntaje</h2>
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="80%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:blueviolet;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="95%"></iframe>
 </div>
-</br><img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
+<img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <div class="container">
 <h2 style="padding:20px">Cantidad de partidas jugadas según tipo</h2>
-<iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="80%"></iframe>
+<iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="95%"></iframe>
 </div>
-</br><img src="assets/img/Capybara_l.jpg">
+<img src="assets/img/Capybara_r.jpg" style=width:55px;height:55px> <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>
 </br>
 
 
