--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <div class="container">
-<h2 style="padding:20px">Cantidad de partidas jugadas según tipo</h2>
+<h2 style="padding:20px">Cantidad de partidas jugadas RM Team Games</h2>
 <iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="95%"></iframe>
 
 </div>
