--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </div>
 <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <div class="container">
-<h2 style="padding:20px">Historial de puntaje</h2>
+<h2 style="padding:20px">ELO Rating</h2>
 
 <iframe id="igraph" scrolling="no" style="border:blueviolet;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="95%"></iframe>
 
 </div>
 <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
 <div class="container">
-<h2 style="padding:20px">Cantidad de partidas jugadas RM Team Games</h2>
+<h2 style="padding:20px">Amount of RM Team Games played</h2>
 <iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="95%"></iframe>
 
 </div>
