--- a/index.html
+++ b/index.html
@@ -5,28 +5,24 @@
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <link rel="shortcut icon" href="assets/img/fav.ico">
 </head>
-<body>
 
- <style>body {background-image: url('assets/img/bgage.jpg'); background-size: 100%;}
-</style> 
-<div class="header2">
+<body style="background-image: url('assets/img/bgage.jpg')";> 
+<header class="header2">
 <h1><img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px> Age of Carpincho <img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px></h1>
-</div>
-<img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
-<div class="container">
-<h2 style="padding:20px">ELO Rating</h2>
-
-<iframe id="igraph" scrolling="no" style="border:blueviolet;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="95%"></iframe>
-
-</div>
-<img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px></br>
-<div class="container">
-<h2 style="padding:20px">Amount of RM Team Games played</h2>
-<iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="95%"></iframe>
-
-</div>
+</header>
+<img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><br>
+<main>
+    <div class="container">
+        <h2 style="padding:20px">ELO Rating</h2>
+        <iframe id="igraph" scrolling="no" style="border:blueviolet;" seamless="seamless" src="assets/charts/Elo_Chart.html" height="525" width="95%"></iframe>
+    </div>
+<img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><br>
+    <div class="container">
+        <h2 style="padding:20px">Amount of RM Team Games played</h2>
+        <iframe id="igraph2" scrolling="no" style="border:none;" seamless="seamless" src="assets/charts/partidas_tipo.html" height="525" width="95%"></iframe>
+    </div>
 <img src="assets/img/Capybara_r.jpg" style=width:55px;height:55px> <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px>
-</br>
-
+        <br>
+</main>
 </body>
 </html>
