--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body style="background-image: url('assets/img/bgage.jpg')";> 
 <header class="header2">
 <h1><img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px> Age of Carpincho <img class="a" img src="assets/img/10500.gif" style=width:75px;height:75px></h1>
+<p class="notice">Data here is no longer being updated. Site moved to <a href="https://ageofcarpincho.netlify.app/">Age of Carpincho Netlify</a>.</p>
 </header>
 <img src="assets/img/Capybara_l.jpg" style=width:55px;height:55px><br>
 <main>
